Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11743

lctl pool operations cannot be run on separate MGS system

XMLWordPrintable

    • 3
    • 9223372036854775807

      The "lctl pool_new", "lctl pool_add", and related commands cannot properly be run on a system where the the MGS is separate from the MDS. The pool commands must be run on the MGS in order to modify the configuration, but the pool configuration is not instantiated on the MGS so it does not have corresponding /proc/fs/lustre/lov/*/pool/ files that lctl uses to verify whether the pool and OSTs exist or not.

      Rather than using the /proc or /sys file existence to verify the pool commands on the MGS, it would be possible to instead parse the filesystem configuration directly from the YAML filesystem configuration output of "lctl llog_print <fsname>-client". This would also avoid the need for lctl to wait for the pool files to appear in /proc after the command is run, which can often take a few seconds.

            emoly.liu Emoly Liu
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: